# conan_issue_13560

./: README.md
libA_issue13560/: CMakeLists.txt  conanfile.py  libA_issue13560.cpp  libA_issue13560.h  libA_issue13560Config.cmake.in
libB_issue13560/: CMakeLists.txt  conanfile.py  libB_issue13560.cpp  libB_issue13560.h  libB_issue13560Config.cmake.in
libC_issue13560/: CMakeLists.txt  conanfile.py  execC_issue13560.cpp  libC_issue13560.cpp  libC_issue13560.h  libC_issue13560Config.cmake.in
